[gd_scene load_steps=4 format=3 uid="uid://cq03irpslm0xv"]

[ext_resource type="Script" uid="uid://byv6i8g71nd1c" path="res://scripts/Game.gd" id="1_qbsmt"]
[ext_resource type="PackedScene" uid="uid://cqtbisskdn4xt" path="res://scenes/spawner.tscn" id="2_cpr0p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uwrxv"]
size = Vector2(720, 80)

[node name="Game" type="Node2D"]
script = ExtResource("1_qbsmt")

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(360, 1240)
shape = SubResource("RectangleShape2D_uwrxv")

[node name="Spawner" parent="." instance=ExtResource("2_cpr0p")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UI/UIRoot"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 16.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
mouse_filter = 0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverPanel" type="Panel" parent="UI/UIRoot"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buttons" type="VBoxContainer" parent="UI/UIRoot/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="UI/UIRoot/GameOverPanel/Buttons"]
layout_mode = 2
text = "Restart"

[node name="ContinueButton" type="Button" parent="UI/UIRoot/GameOverPanel/Buttons"]
layout_mode = 2
text = "Continue"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 640)
limit_left = 0
limit_top = -100000
limit_right = 720
limit_bottom = 1280
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[connection signal="pressed" from="UI/UIRoot/GameOverPanel/Buttons/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="UI/UIRoot/GameOverPanel/Buttons/ContinueButton" to="." method="_on_continue_pressed"]
